# quant-daily-backtest

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml  daily.yml
analytics/: metrics.py
config/: settings.py
results/: latest_metrics.json
state/: model_state.json  performance_history.csv
strategy/: adaptive_sma.py  base_strategy.py  sma_strategy.py
test/: test_pipeline.py
tests/: conftest.py  test_data_loader.py  test_metrics.py  test_pipeline.py  test_strategy.py
utils/: data_loader.py
