[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_daily_research"
version = "0.1.0"
description = "Stateful automated quant research engine"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]